// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BaseClientTypeGenerator > server URL variables (region/edge routing) > guards the configured base URL env var when requested 1`] = `
"
export function normalizeClientOptions<T extends BaseClientOptions = BaseClientOptions>(
    options: T
): NormalizedClientOptions<T> {
    const headers = mergeHeaders(
        { "": "JavaScript", "": "@test/sdk", "": "1.0.0", "User-Agent": "@test/sdk/1.0.0", "X-Fern-Runtime": core.RUNTIME.type, "X-Fern-Runtime-Version": core.RUNTIME.version },
        options?.headers
    );

    const baseUrl = options?.baseUrl ?? (options?.environment == null ? (typeof process !== "undefined" ? process.env?.["MY_API_BASE_URL"] : undefined) : undefined);

    return {
        ...options,
        baseUrl,
        logging: core.createLogger(options?.logging),
        headers,
    } as NormalizedClientOptions<T>;
}"
`;

exports[`BaseClientTypeGenerator > server URL variables (region/edge routing) > reads the base URL from the configured env var for multiple base URL environments 1`] = `
"
export function normalizeClientOptions<T extends BaseClientOptions = BaseClientOptions>(
    options: T
): NormalizedClientOptions<T> {
    const headers = mergeHeaders(
        { "": "JavaScript", "": "@test/sdk", "": "1.0.0", "User-Agent": "@test/sdk/1.0.0", "X-Fern-Runtime": core.RUNTIME.type, "X-Fern-Runtime-Version": core.RUNTIME.version },
        options?.headers
    );

    let environment = options?.environment;
    if (options?.region != null || options?.serverUrlEnvironment != null) {
        const _region = options?.region ?? "us-east-1";
        const _serverUrlEnvironment = options?.serverUrlEnvironment ?? "prod";
        if (environment == null) {
            environment = {
                base: \`https://api.\${_region}.\${_serverUrlEnvironment}.example.com/v1\`,
                auth: \`https://auth.\${_region}.example.com\`,
            };
        } else {
            const _environmentUrls = new Map<unknown, environments.TestEnvironmentUrls>([
                [
                    environments.TestEnvironment.RegionalApiServer,
                    {
                        base: \`https://api.\${_region}.\${_serverUrlEnvironment}.example.com/v1\`,
                        auth: \`https://auth.\${_region}.example.com\`,
                    },
                ],
            ]);
            environment = _environmentUrls.get(environment) ?? environment;
        }
    }

    const baseUrl = options?.baseUrl ?? (options?.environment == null ? process.env?.["MY_API_BASE_URL"] : undefined);

    return {
        ...options,
        baseUrl,
        environment,
        logging: core.createLogger(options?.logging),
        headers,
    } as NormalizedClientOptions<T>;
}"
`;

exports[`BaseClientTypeGenerator > server URL variables (region/edge routing) > reads the base URL from the configured env var for single base URL environments 1`] = `
"
export function normalizeClientOptions<T extends BaseClientOptions = BaseClientOptions>(
    options: T
): NormalizedClientOptions<T> {
    const headers = mergeHeaders(
        { "": "JavaScript", "": "@test/sdk", "": "1.0.0", "User-Agent": "@test/sdk/1.0.0", "X-Fern-Runtime": core.RUNTIME.type, "X-Fern-Runtime-Version": core.RUNTIME.version },
        options?.headers
    );

    const baseUrl = options?.baseUrl ?? (options?.environment == null ? process.env?.["MY_API_BASE_URL"] : undefined);

    return {
        ...options,
        baseUrl,
        logging: core.createLogger(options?.logging),
        headers,
    } as NormalizedClientOptions<T>;
}"
`;

exports[`BaseClientTypeGenerator > server URL variables (region/edge routing) > uses the configured env var in single base URL server variable interpolation 1`] = `
"
export function normalizeClientOptions<T extends BaseClientOptions = BaseClientOptions>(
    options: T
): NormalizedClientOptions<T> {
    const headers = mergeHeaders(
        { "": "JavaScript", "": "@test/sdk", "": "1.0.0", "User-Agent": "@test/sdk/1.0.0", "X-Fern-Runtime": core.RUNTIME.type, "X-Fern-Runtime-Version": core.RUNTIME.version },
        options?.headers
    );

    let baseUrl = options?.baseUrl ?? (options?.environment == null ? process.env?.["MY_API_BASE_URL"] : undefined);
    if (options?.region != null) {
        const _region = options?.region ?? "us-east-1";
        if (baseUrl == null) {
            const _environmentUrls = new Map<unknown, string>([
                [environments.TestEnvironment.Default, \`https://api.\${_region}.example.com\`],
            ]);
            baseUrl = _environmentUrls.get(options?.environment) ?? \`https://api.\${_region}.example.com\`;
        }
    }

    return {
        ...options,
        baseUrl,
        logging: core.createLogger(options?.logging),
        headers,
    } as NormalizedClientOptions<T>;
}"
`;
